# evaluation_tools

./: README.md
convert/: convertpose.py
convert/convertOurPose/: CMakeLists.txt  convert_pose.cpp  getgt.cpp
convert/convertOurPose/config/: config.yaml
convert/kitti2Tum/: CMakeLists.txt  convert1.cpp  convert2.cpp  说明
convert/pose_format_convert/: CMakeLists.txt  convert.cpp
convert/rtkgps2pose/: TF.py  rtkgps2xy.py
tools/kitti_devkit/: evaluate_odometry.cpp
tools/kitti_odo_eva/: README.md
tools/rgbd_benchmark_tools/: evaluate_ate.py  evaluate_rpe.py  output.txt  plot_camera_trajectories.m  prepare3dedges.py  project_point_cloud_to_image.py
trajectory_compare/: CMakeLists.txt  trajectory_compare.cpp
